{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 253,
  "lineage": "ae478495-f387-7797-49cf-ca25c21cc75f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-18",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkInterfaces/vmjlablz1srv01738",
            "internal_domain_name_suffix": "ihiukknkp1deflhglanqdnjq0f.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.22.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/publicIPAddresses/vmjlablz1srv01-ip",
                "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/Compute"
              }
            ],
            "location": "southcentralus",
            "name": "vmjlablz1srv01738",
            "private_ip_address": "10.22.1.4",
            "private_ip_addresses": [
              "10.22.1.4"
            ],
            "resource_group_name": "rg-jlab-vwan"
          },
          "dependencies": [
            "azurerm_public_ip.res-30"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-Compute-nsg-southcentralus",
            "location": "southcentralus",
            "name": "vnet-vwan-jlab-scus-Compute-nsg-southcentralus",
            "resource_group_name": "rg-jlab-vwan",
            "security_rule": [
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowCorpnet",
                "priority": 2700,
                "protocol": "*",
                "source_address_prefix": "CorpNetPublic",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSAW",
                "priority": 2701,
                "protocol": "*",
                "source_address_prefix": "CorpNetSaw",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAnyRDPInbound",
                "priority": 3000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "MDC JIT Network Access rule for policy 'default' of VM 'vmjlablz1srv01'.",
                "destination_address_prefix": "10.22.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "MicrosoftDefenderForCloud-JITRule_1030276620_0E61496342FC411D9A9538EADAF5A905",
                "priority": 2900,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.res-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-27",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-default-nsg-southcentralus",
            "location": "southcentralus",
            "name": "vnet-vwan-jlab-scus-default-nsg-southcentralus",
            "resource_group_name": "rg-jlab-vwan",
            "security_rule": [
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowCorpnet",
                "priority": 2700,
                "protocol": "*",
                "source_address_prefix": "CorpNetPublic",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSAW",
                "priority": 2701,
                "protocol": "*",
                "source_address_prefix": "CorpNetSaw",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.res-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-23",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-Compute-nsg-southcentralus/securityRules/AllowCorpnet",
            "name": "AllowCorpnet",
            "network_security_group_name": "vnet-vwan-jlab-scus-Compute-nsg-southcentralus",
            "priority": 2700,
            "protocol": "*",
            "resource_group_name": "rg-jlab-vwan",
            "source_address_prefix": "CorpNetPublic",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-22",
            "azurerm_resource_group.res-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-24",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-Compute-nsg-southcentralus/securityRules/AllowSAW",
            "name": "AllowSAW",
            "network_security_group_name": "vnet-vwan-jlab-scus-Compute-nsg-southcentralus",
            "priority": 2701,
            "protocol": "*",
            "resource_group_name": "rg-jlab-vwan",
            "source_address_prefix": "CorpNetSaw",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-22",
            "azurerm_resource_group.res-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-25",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-Compute-nsg-southcentralus/securityRules/DenyAnyRDPInbound",
            "name": "DenyAnyRDPInbound",
            "network_security_group_name": "vnet-vwan-jlab-scus-Compute-nsg-southcentralus",
            "priority": 3000,
            "protocol": "Tcp",
            "resource_group_name": "rg-jlab-vwan",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-22",
            "azurerm_resource_group.res-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-26",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "MDC JIT Network Access rule for policy 'default' of VM 'vmjlablz1srv01'.",
            "destination_address_prefix": "10.22.1.4",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-Compute-nsg-southcentralus/securityRules/MicrosoftDefenderForCloud-JITRule_1030276620_0E61496342FC411D9A9538EADAF5A905",
            "name": "MicrosoftDefenderForCloud-JITRule_1030276620_0E61496342FC411D9A9538EADAF5A905",
            "network_security_group_name": "vnet-vwan-jlab-scus-Compute-nsg-southcentralus",
            "priority": 2900,
            "protocol": "*",
            "resource_group_name": "rg-jlab-vwan",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-22",
            "azurerm_resource_group.res-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-28",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-default-nsg-southcentralus/securityRules/AllowCorpnet",
            "name": "AllowCorpnet",
            "network_security_group_name": "vnet-vwan-jlab-scus-default-nsg-southcentralus",
            "priority": 2700,
            "protocol": "*",
            "resource_group_name": "rg-jlab-vwan",
            "source_address_prefix": "CorpNetPublic",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-27",
            "azurerm_resource_group.res-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-29",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-default-nsg-southcentralus/securityRules/AllowSAW",
            "name": "AllowSAW",
            "network_security_group_name": "vnet-vwan-jlab-scus-default-nsg-southcentralus",
            "priority": 2701,
            "protocol": "*",
            "resource_group_name": "rg-jlab-vwan",
            "source_address_prefix": "CorpNetSaw",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-27",
            "azurerm_resource_group.res-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-30",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/publicIPAddresses/vmjlablz1srv01-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.65.38.43",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "vmjlablz1srv01-ip",
            "resource_group_name": "rg-jlab-vwan",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.res-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-38",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.22.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/Compute",
            "name": "Compute",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-jlab-vwan",
            "virtual_network_name": "vnet-vwan-jlab-scus"
          },
          "dependencies": [
            "azurerm_resource_group.res-2",
            "azurerm_virtual_network.res-37"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-40",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.22.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/default",
            "name": "default",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-jlab-vwan",
            "virtual_network_name": "vnet-vwan-jlab-scus"
          },
          "dependencies": [
            "azurerm_resource_group.res-2",
            "azurerm_virtual_network.res-37"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-39",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/Compute",
            "network_security_group_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-Compute-nsg-southcentralus",
            "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/Compute"
          },
          "dependencies": [
            "azurerm_network_security_group.res-22",
            "azurerm_resource_group.res-2",
            "azurerm_subnet.res-38",
            "azurerm_virtual_network.res-37"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-41",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/default",
            "network_security_group_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-default-nsg-southcentralus",
            "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/default"
          },
          "dependencies": [
            "azurerm_network_security_group.res-27",
            "azurerm_resource_group.res-2",
            "azurerm_subnet.res-40",
            "azurerm_virtual_network.res-37"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-37",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.22.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2945d141-7eaa-42c6-ace6-581b01b530d5",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus",
            "location": "southcentralus",
            "name": "vnet-vwan-jlab-scus",
            "resource_group_name": "rg-jlab-vwan",
            "subnet": [
              {
                "address_prefix": "10.22.0.0/24",
                "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/default",
                "name": "default",
                "security_group": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-default-nsg-southcentralus"
              },
              {
                "address_prefix": "10.22.1.0/24",
                "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/Compute",
                "name": "Compute",
                "security_group": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-Compute-nsg-southcentralus"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.res-2"
          ]
        }
      ]
    }
  ]
}